Cherry-pick be575e7192ee. rdar://problem/103539460

Fix negative z-index layers from triggering unnecessary compositing of foreground layers.
    https://bugs.webkit.org/show_bug.cgi?id=244543
    <rdar://99335877>

    Reviewed by Simon Fraser.

    We currently push a speculative compositing container onto the overlap stack when processing
    negative z-index children, in case any of them require compositing. We then pop it off it it doesn't
    get used. Unfortunately other mutations can happen to the overlap stack while it's pushed, and just
    popping the unused container isn't sufficient to restore this.

    This instead duplicates the overlap stack when we push a speculative compositing container, and makes any
    changes to both of them. Once we know which path is correct, we select the correct stack and throw away
    the duplicate.

    This fixes cases where negative z-index children weren't composited, but they ended up affecting overlaps
    of positive z-index children and making them composited unnecessarily.

    * LayoutTests/compositing/layer-creation/no-compositing-for-negative-z-sibling-expected.txt: Added.
    * LayoutTests/compositing/layer-creation/no-compositing-for-negative-z-sibling.html: Added.
    * Source/WebCore/rendering/LayerOverlapMap.cpp:
    (WebCore::OverlapMapContainer::isEmpty const):
    (WebCore::LayerOverlapMap::add):
    (WebCore::LayerOverlapMap::overlapsLayers const):
    (WebCore::LayerOverlapMap::pushCompositingContainer):
    (WebCore::LayerOverlapMap::pushSpeculativeCompositingContainer):
    (WebCore::LayerOverlapMap::confirmSpeculativeCompositingContainer):
    (WebCore::LayerOverlapMap::maybePopSpeculativeCompositingContainer):
    * Source/WebCore/rendering/LayerOverlapMap.h:
    * Source/WebCore/rendering/RenderLayerCompositor.cpp:
    (WebCore::RenderLayerCompositor::computeCompositingRequirements):

    Canonical link: https://commits.webkit.org/254746@main

Canonical link: https://commits.webkit.org/252432.979@safari-7614-branch